--- a/SignalRWPFClient/MainWindow.xaml
+++ b/SignalRWPFClient/MainWindow.xaml
@@ -3,19 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:SignalRWPFClient"
         mc:Ignorable="d"
-        Title="SignalR Test Solution" Height="450" Width="300" Loaded="Window_Loaded">
-    <StackPanel Margin="4">
-        <Label Content="Enter username"/>
-        <TextBox x:Name="userTextBox" />
-        <Label Content="Enter message"/>
-        <TextBox x:Name="messageTextBox" />
-        <Button x:Name="sendBtn" Content="Send" Click="Send_Click" IsEnabled="False" />
-        <Grid Height="45">
-            <Label Content="Enter present" HorizontalAlignment="Left" />
-            <TextBox x:Name="presentTextBox" Width="140" HorizontalAlignment="Left" Margin="0,25,0,0"/>
-            <Button x:Name="sendPresemtBtn" Content="Send present" Click="SendPresent_Click" IsEnabled="False" Width="80" HorizontalAlignment="Right" Margin="0,25,0,0" />
-        </Grid>
-        <ListBox x:Name="chatbox" />
-    </StackPanel>
+        Title="SignalR Test Solution" Height="450" Width="320" >
+    <Frame x:Name="frame" Content="Frame" Margin="0" Source="Login.xaml" NavigationUIVisibility="Hidden"/>
 </Window>
