--- a/SignalRWPFClient/ViewControllers/Pages/Login.xaml
+++ b/SignalRWPFClient/ViewControllers/Pages/Login.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="SignalRWPFClient.Login"
+﻿<Page x:Class="SignalRWPFClient.ViewControllers.Pages.Login"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:SignalRWPFClient"
+      xmlns:local="clr-namespace:SignalRWPFClient.ViewControllers.Pages"
       mc:Ignorable="d" 
       Title="Log In" Height="450" Width="300">
     <StackPanel Margin="4">
