--- a/SignalRWPFClient/ViewControllers/Pages/Messanger.xaml
+++ b/SignalRWPFClient/ViewControllers/Pages/Messanger.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="SignalRWPFClient.Messanger"
+﻿<Page x:Class="SignalRWPFClient.ViewControllers.Pages.Messanger"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:SignalRWPFClient"
+      xmlns:local="clr-namespace:SignalRWPFClient.ViewControllers.Pages"
       mc:Ignorable="d" 
       Title="SignalR Test Solution" Height="450" Width="300">
     <StackPanel Margin="4">
@@ -20,6 +20,14 @@
             <TextBox x:Name="presentTextBox" Width="140" HorizontalAlignment="Left" Margin="0,25,0,0"/>
             <Button x:Name="sendPresemtBtn" Content="Send present" Click="SendPresent_Click" Width="80" HorizontalAlignment="Right" Margin="0,25,0,0" />
         </Grid>
+        <Grid Height="45">
+            <Label Content="Enter group name" HorizontalAlignment="Left"/>
+            <TextBox x:Name="groupNameTextBox" Width="140" HorizontalAlignment="Left" Margin="0,25,0,0"/>
+            <Button x:Name="enterGrouptBtn" Content="Enter" Click="EnterToGroup_Click" Width="80" HorizontalAlignment="Right" Margin="0,25,0,0" />
+        </Grid>
+        <Label Content="Enter group message"   />
+        <TextBox x:Name="groupMessageTextBox" />
+        <Button x:Name="sendToGrouptBtn" Content="Send to group" Click="SendToGroup_Click" />
         <ListBox x:Name="chatbox" />
     </StackPanel>
 
